				- do the easy, straighforward ones. Leave the rest up to the enduser. 
	- e.g. 
		Before: 
			StringTypeConverter : TypeConverter, ITypeConverter
		After: 
			StringTypeConverter : ITypeConverter
	- LayoutDescriptor
		- shouldn't have knowledge of all the type converters. This should be an abstraction
		- violation of single responsibility principle, and open / closed principle
			- if a new type converter was created, LayoutDescriptor would have to change with current implementation
			- only depend on abstractions in LayoutDescriptor

simplify type TypeConverters
	- think through which ones I want to handle, get rid of all the rest
		- awkward to convert string to sybte, etc... skip
		- provided end user ability to configure this themself (ITypeConverter and AppendField method that accepts one)
Think hard about the api / interface for the TypeConverters, make sure it's what I want it to be... e.g. return object in ConvertFromString? What about a Generic Type instead on the ITypeConverter class? 

Don't worry about deadlines



7/26/18
	- Removed uncommon primitive types.
	- No longer extending .net TypeConverter. Kept it simple, and only implemented pre-existing ITypeConverter. 
		- Changes in progress, perhaps using a generic for return type of ITypeConverter. If too messy, will make it an object. 

7/31/18
	- Removed extra entry from dictionary
	- ITypeConverter only defines "ConvertFromString"
		- Should ITypeConverter return a generic, or an object? 
		- Can't mix generics in a collection, so would need to introduce a new base interface and use this instead.
			- At that point, how much benefit is there to using a generic? 
			- Played around with some differnet options. Used <object> as the type, too messy. 
				- using the empty base interface works well for keeping all the other interfaces and method signatures clean, but when using "ConvertFromString" it becomes problematic
				- If it was an abstract class, might be easier than a base interface