@@ -2,7 +2,7 @@
 {
     public interface ITypeConverter<T> : ITypeConverterBase
     {
-        T ConvertFromString(string stringValue);
+       new  T ConvertFromString(string stringValue);
     }
 
     // Need a base class / interface to use this in a list with mixed generics. 
@@ -10,9 +10,10 @@
     //  // https://www.roelvanlisdonk.nl/2010/08/31/how-to-mix-generic-classes-in-a-generic-list-in-c/
     // The base class doesn't doo anything
     // Tried using "ITypeConverter<object>", but can't mix and match in a collection
+    // This would be easier with an abstract class, and abstract method for ConvertFromString. Equivilent for interface? 
     public interface ITypeConverterBase
     {
-    //    object ConvertFromString(string stringValue);
+        // dynamic ConvertFromString(string stringValue);
     }
 }
 
